--- a/ProyectoIntegrador_VanottiFrancoMatias/angular.json
+++ b/ProyectoIntegrador_VanottiFrancoMatias/angular.json
@@ -25,9 +25,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "ProyectoIntegrador_VanottiFrancoMatias/node_modules/bootstrap/dist/css/bootstrap.css",
+              "src/styles.css"  
             ],
-            "scripts": []
+            "scripts": [
+              "ProyectoIntegrador_VanottiFrancoMatias/node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
