--- a/ProyectoIntegrador_VanottiFrancoMatias/angular.json
+++ b/ProyectoIntegrador_VanottiFrancoMatias/angular.json
@@ -25,11 +25,11 @@
               "src/assets"
             ],
             "styles": [
-              "ProyectoIntegrador_VanottiFrancoMatias/node_modules/bootstrap/dist/css/bootstrap.css",
-              "src/styles.css"  
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": [
-              "ProyectoIntegrador_VanottiFrancoMatias/node_modules/bootstrap/dist/js/bootstrap.js"
+              "node_modules/bootstrap/dist/js/bootstrap.js"
             ]
           },
           "configurations": {
