--- a/ProyectoIntegrador_VanottiFrancoMatias/BackEnd3/pom.xml
+++ b/ProyectoIntegrador_VanottiFrancoMatias/BackEnd3/pom.xml
@@ -74,7 +74,12 @@
             <version>3.12.0</version>
         </dependency>
         
-       
+       <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>5.6.3</version>
+            <type>jar</type>
+        </dependency>
         
     </dependencies>
 
